# quickbooks-mcp-server

./: Dockerfile  README.md  env_template.txt  main_quickbooks_mcp.py  pyproject.toml  quickbooks_interaction.py  server.py
docs/: DECISIONS.md  SPEC.md
